Switch to ZGC. Centralize data storage